--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-plugin-event-listener",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "description": "check react-native memory leak",
   "keywords": [
     "eslint",
@@ -8,7 +8,7 @@
     "eslint-plugin"
   ],
   "author": "SinLucifer",
-  "main": "lib/index.js",
+  "main": "index.js",
   "scripts": {
     "test": "mocha tests --recursive"
   },
