--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
   "scripts": {
     "test": "mocha tests --recursive"
   },
+  "repository": { 
+    "type": "git",
+    "url": "https://github.com/SinLucifer/eslint-plugin-event-listeners.git"
+  },
   "dependencies": {
     "requireindex": "~1.1.0"
   },
